# api/src/main/java/com/gemstoneseekers/dtos/request/CandidateLanguageRequest.java
@@ -1,0 +1,7 @@
+package com.gemstoneseekers.dtos.request;
+
+
+public record CandidateLanguageRequest(
+    String languageName,
+    String proficiency
+) {}
